Add localization info for new directions.

--- a/diane-game-engine/src/locale/diane/direction.properties
+++ b/diane-game-engine/src/locale/diane/direction.properties
@@ -1,12 +1,729 @@
-0=Northwest
+0=None
 1=North
-2=Northeast
-3=East
-4=Southeast
-5=South
-6=Southwest
-7=West
-8=Horizontal
-9=Vertical
-10=
-11=!INVALID!
+2=South
+3=West
+4=East
+5=North West
+6=North East
+7=South West
+8=South East
+9=Down
+10=Up
+11=North Down
+12=South Down
+13=West Down
+14=East Down
+15=North West Down
+16=North East Down
+17=South West Down
+18=South East Down
+19=North Up
+20=South Up
+21=West Up
+22=East Up
+23=North West Up
+24=North East Up
+25=South West Up
+26=South East Up
+27=Into
+28=Out
+29=North Into
+30=South Into
+31=West Into
+32=East Into
+33=North West Into
+34=North East Into
+35=South West Into
+36=South East Into
+37=Down Into
+38=Up Into
+39=North Down Into
+40=South Down Into
+41=West Down Into
+42=East Down Into
+43=North West Down Into
+44=North East Down Into
+45=South West Down Into
+46=South East Down Into
+47=North Up Into
+48=South Up Into
+49=West Up Into
+50=East Up Into
+51=North West Up Into
+52=North East Up Into
+53=South West Up Into
+54=South East Up Into
+55=North Out
+56=South Out
+57=West Out
+58=East Out
+59=North West Out
+60=North East Out
+61=South West Out
+62=South East Out
+63=Down Out
+64=Up Out
+65=North Down Out
+66=South Down Out
+67=West Down Out
+68=East Down Out
+69=North West Down Out
+70=North East Down Out
+71=South West Down Out
+72=South East Down Out
+73=North Up Out
+74=South Up Out
+75=West Up Out
+76=East Up Out
+77=North West Up Out
+78=North East Up Out
+79=South West Up Out
+80=South East Up Out
+81=Previous
+82=Next
+83=North Previous
+84=South Previous
+85=West Previous
+86=East Previous
+87=North West Previous
+88=North East Previous
+89=South West Previous
+90=South East Previous
+91=Down Previous
+92=Up Previous
+93=North Down Previous
+94=South Down Previous
+95=West Down Previous
+96=East Down Previous
+97=North West Down Previous
+98=North East Down Previous
+99=South West Down Previous
+100=South East Down Previous
+101=North Up Previous
+102=South Up Previous
+103=West Up Previous
+104=East Up Previous
+105=North West Up Previous
+106=North East Up Previous
+107=South West Up Previous
+108=South East Up Previous
+109=Into Previous
+110=Out Previous
+111=North Into Previous
+112=South Into Previous
+113=West Into Previous
+114=East Into Previous
+115=North West Into Previous
+116=North East Into Previous
+117=South West Into Previous
+118=South East Into Previous
+119=Down Into Previous
+120=Up Into Previous
+121=North Down Into Previous
+122=South Down Into Previous
+123=West Down Into Previous
+124=East Down Into Previous
+125=North West Down Into Previous
+126=North East Down Into Previous
+127=South West Down Into Previous
+128=South East Down Into Previous
+129=North Up Into Previous
+130=South Up Into Previous
+131=West Up Into Previous
+132=East Up Into Previous
+133=North West Up Into Previous
+134=North East Up Into Previous
+135=South West Up Into Previous
+136=South East Up Into Previous
+137=North Out Previous
+138=South Out Previous
+139=West Out Previous
+140=East Out Previous
+141=North West Out Previous
+142=North East Out Previous
+143=South West Out Previous
+144=South East Out Previous
+145=Down Out Previous
+146=Up Out Previous
+147=North Down Out Previous
+148=South Down Out Previous
+149=West Down Out Previous
+150=East Down Out Previous
+151=North West Down Out Previous
+152=North East Down Out Previous
+153=South West Down Out Previous
+154=South East Down Out Previous
+155=North Up Out Previous
+156=South Up Out Previous
+157=West Up Out Previous
+158=East Up Out Previous
+159=North West Up Out Previous
+160=North East Up Out Previous
+161=South West Up Out Previous
+162=South East Up Out Previous
+163=North Next
+164=South Next
+165=West Next
+166=East Next
+167=North West Next
+168=North East Next
+169=South West Next
+170=South East Next
+171=Down Next
+172=Up Next
+173=North Down Next
+174=South Down Next
+175=West Down Next
+176=East Down Next
+177=North West Down Next
+178=North East Down Next
+179=South West Down Next
+180=South East Down Next
+181=North Up Next
+182=South Up Next
+183=West Up Next
+184=East Up Next
+185=North West Up Next
+186=North East Up Next
+187=South West Up Next
+188=South East Up Next
+189=Into Next
+190=Out Next
+191=North Into Next
+192=South Into Next
+193=West Into Next
+194=East Into Next
+195=North West Into Next
+196=North East Into Next
+197=South West Into Next
+198=South East Into Next
+199=Down Into Next
+200=Up Into Next
+201=North Down Into Next
+202=South Down Into Next
+203=West Down Into Next
+204=East Down Into Next
+205=North West Down Into Next
+206=North East Down Into Next
+207=South West Down Into Next
+208=South East Down Into Next
+209=North Up Into Next
+210=South Up Into Next
+211=West Up Into Next
+212=East Up Into Next
+213=North West Up Into Next
+214=North East Up Into Next
+215=South West Up Into Next
+216=South East Up Into Next
+217=North Out Next
+218=South Out Next
+219=West Out Next
+220=East Out Next
+221=North West Out Next
+222=North East Out Next
+223=South West Out Next
+224=South East Out Next
+225=Down Out Next
+226=Up Out Next
+227=North Down Out Next
+228=South Down Out Next
+229=West Down Out Next
+230=East Down Out Next
+231=North West Down Out Next
+232=North East Down Out Next
+233=South West Down Out Next
+234=South East Down Out Next
+235=North Up Out Next
+236=South Up Out Next
+237=West Up Out Next
+238=East Up Out Next
+239=North West Up Out Next
+240=North East Up Out Next
+241=South West Up Out Next
+242=South East Up Out Next
+243=Past
+244=Future
+245=North Past
+246=South Past
+247=West Past
+248=East Past
+249=North West Past
+250=North East Past
+251=South West Past
+252=South East Past
+253=Down Past
+254=Up Past
+255=North Down Past
+256=South Down Past
+257=West Down Past
+258=East Down Past
+259=North West Down Past
+260=North East Down Past
+261=South West Down Past
+262=South East Down Past
+263=North Up Past
+264=South Up Past
+265=West Up Past
+266=East Up Past
+267=North West Up Past
+268=North East Up Past
+269=South West Up Past
+270=South East Up Past
+271=Into Past
+272=Out Past
+273=North Into Past
+274=South Into Past
+275=West Into Past
+276=East Into Past
+277=North West Into Past
+278=North East Into Past
+279=South West Into Past
+280=South East Into Past
+281=Down Into Past
+282=Up Into Past
+283=North Down Into Past
+284=South Down Into Past
+285=West Down Into Past
+286=East Down Into Past
+287=North West Down Into Past
+288=North East Down Into Past
+289=South West Down Into Past
+290=South East Down Into Past
+291=North Up Into Past
+292=South Up Into Past
+293=West Up Into Past
+294=East Up Into Past
+295=North West Up Into Past
+296=North East Up Into Past
+297=South West Up Into Past
+298=South East Up Into Past
+299=North Out Past
+300=South Out Past
+301=West Out Past
+302=East Out Past
+303=North West Out Past
+304=North East Out Past
+305=South West Out Past
+306=South East Out Past
+307=Down Out Past
+308=Up Out Past
+309=North Down Out Past
+310=South Down Out Past
+311=West Down Out Past
+312=East Down Out Past
+313=North West Down Out Past
+314=North East Down Out Past
+315=South West Down Out Past
+316=South East Down Out Past
+317=North Up Out Past
+318=South Up Out Past
+319=West Up Out Past
+320=East Up Out Past
+321=North West Up Out Past
+322=North East Up Out Past
+323=South West Up Out Past
+324=South East Up Out Past
+325=Previous Past
+326=Next Past
+327=North Previous Past
+328=South Previous Past
+329=West Previous Past
+330=East Previous Past
+331=North West Previous Past
+332=North East Previous Past
+333=South West Previous Past
+334=South East Previous Past
+335=Down Previous Past
+336=Up Previous Past
+337=North Down Previous Past
+338=South Down Previous Past
+339=West Down Previous Past
+340=East Down Previous Past
+341=North West Down Previous Past
+342=North East Down Previous Past
+343=South West Down Previous Past
+344=South East Down Previous Past
+345=North Up Previous Past
+346=South Up Previous Past
+347=West Up Previous Past
+348=East Up Previous Past
+349=North West Up Previous Past
+350=North East Up Previous Past
+351=South West Up Previous Past
+352=South East Up Previous Past
+353=Into Previous Past
+354=Out Previous Past
+355=North Into Previous Past
+356=South Into Previous Past
+357=West Into Previous Past
+358=East Into Previous Past
+359=North West Into Previous Past
+360=North East Into Previous Past
+361=South West Into Previous Past
+362=South East Into Previous Past
+363=Down Into Previous Past
+364=Up Into Previous Past
+365=North Down Into Previous Past
+366=South Down Into Previous Past
+367=West Down Into Previous Past
+368=East Down Into Previous Past
+369=North West Down Into Previous Past
+370=North East Down Into Previous Past
+371=South West Down Into Previous Past
+372=South East Down Into Previous Past
+373=North Up Into Previous Past
+374=South Up Into Previous Past
+375=West Up Into Previous Past
+376=East Up Into Previous Past
+377=North West Up Into Previous Past
+378=North East Up Into Previous Past
+379=South West Up Into Previous Past
+380=South East Up Into Previous Past
+381=North Out Previous Past
+382=South Out Previous Past
+383=West Out Previous Past
+384=East Out Previous Past
+385=North West Out Previous Past
+386=North East Out Previous Past
+387=South West Out Previous Past
+388=South East Out Previous Past
+389=Down Out Previous Past
+390=Up Out Previous Past
+391=North Down Out Previous Past
+392=South Down Out Previous Past
+393=West Down Out Previous Past
+394=East Down Out Previous Past
+395=North West Down Out Previous Past
+396=North East Down Out Previous Past
+397=South West Down Out Previous Past
+398=South East Down Out Previous Past
+399=North Up Out Previous Past
+400=South Up Out Previous Past
+401=West Up Out Previous Past
+402=East Up Out Previous Past
+403=North West Up Out Previous Past
+404=North East Up Out Previous Past
+405=South West Up Out Previous Past
+406=South East Up Out Previous Past
+407=North Next Past
+408=South Next Past
+409=West Next Past
+410=East Next Past
+411=North West Next Past
+412=North East Next Past
+413=South West Next Past
+414=South East Next Past
+415=Down Next Past
+416=Up Next Past
+417=North Down Next Past
+418=South Down Next Past
+419=West Down Next Past
+420=East Down Next Past
+421=North West Down Next Past
+422=North East Down Next Past
+423=South West Down Next Past
+424=South East Down Next Past
+425=North Up Next Past
+426=South Up Next Past
+427=West Up Next Past
+428=East Up Next Past
+429=North West Up Next Past
+430=North East Up Next Past
+431=South West Up Next Past
+432=South East Up Next Past
+433=Into Next Past
+434=Out Next Past
+435=North Into Next Past
+436=South Into Next Past
+437=West Into Next Past
+438=East Into Next Past
+439=North West Into Next Past
+440=North East Into Next Past
+441=South West Into Next Past
+442=South East Into Next Past
+443=Down Into Next Past
+444=Up Into Next Past
+445=North Down Into Next Past
+446=South Down Into Next Past
+447=West Down Into Next Past
+448=East Down Into Next Past
+449=North West Down Into Next Past
+450=North East Down Into Next Past
+451=South West Down Into Next Past
+452=South East Down Into Next Past
+453=North Up Into Next Past
+454=South Up Into Next Past
+455=West Up Into Next Past
+456=East Up Into Next Past
+457=North West Up Into Next Past
+458=North East Up Into Next Past
+459=South West Up Into Next Past
+460=South East Up Into Next Past
+461=North Out Next Past
+462=South Out Next Past
+463=West Out Next Past
+464=East Out Next Past
+465=North West Out Next Past
+466=North East Out Next Past
+467=South West Out Next Past
+468=South East Out Next Past
+469=Down Out Next Past
+470=Up Out Next Past
+471=North Down Out Next Past
+472=South Down Out Next Past
+473=West Down Out Next Past
+474=East Down Out Next Past
+475=North West Down Out Next Past
+476=North East Down Out Next Past
+477=South West Down Out Next Past
+478=South East Down Out Next Past
+479=North Up Out Next Past
+480=South Up Out Next Past
+481=West Up Out Next Past
+482=East Up Out Next Past
+483=North West Up Out Next Past
+484=North East Up Out Next Past
+485=South West Up Out Next Past
+486=South East Up Out Next Past
+487=North Future
+488=South Future
+489=West Future
+490=East Future
+491=North West Future
+492=North East Future
+493=South West Future
+494=South East Future
+495=Down Future
+496=Up Future
+497=North Down Future
+498=South Down Future
+499=West Down Future
+500=East Down Future
+501=North West Down Future
+502=North East Down Future
+503=South West Down Future
+504=South East Down Future
+505=North Up Future
+506=South Up Future
+507=West Up Future
+508=East Up Future
+509=North West Up Future
+510=North East Up Future
+511=South West Up Future
+512=South East Up Future
+513=Into Future
+514=Out Future
+515=North Into Future
+516=South Into Future
+517=West Into Future
+518=East Into Future
+519=North West Into Future
+520=North East Into Future
+521=South West Into Future
+522=South East Into Future
+523=Down Into Future
+524=Up Into Future
+525=North Down Into Future
+526=South Down Into Future
+527=West Down Into Future
+528=East Down Into Future
+529=North West Down Into Future
+530=North East Down Into Future
+531=South West Down Into Future
+532=South East Down Into Future
+533=North Up Into Future
+534=South Up Into Future
+535=West Up Into Future
+536=East Up Into Future
+537=North West Up Into Future
+538=North East Up Into Future
+539=South West Up Into Future
+540=South East Up Into Future
+541=North Out Future
+542=South Out Future
+543=West Out Future
+544=East Out Future
+545=North West Out Future
+546=North East Out Future
+547=South West Out Future
+548=South East Out Future
+549=Down Out Future
+550=Up Out Future
+551=North Down Out Future
+552=South Down Out Future
+553=West Down Out Future
+554=East Down Out Future
+555=North West Down Out Future
+556=North East Down Out Future
+557=South West Down Out Future
+558=South East Down Out Future
+559=North Up Out Future
+560=South Up Out Future
+561=West Up Out Future
+562=East Up Out Future
+563=North West Up Out Future
+564=North East Up Out Future
+565=South West Up Out Future
+566=South East Up Out Future
+567=Previous Future
+568=Next Future
+569=North Previous Future
+570=South Previous Future
+571=West Previous Future
+572=East Previous Future
+573=North West Previous Future
+574=North East Previous Future
+575=South West Previous Future
+576=South East Previous Future
+577=Down Previous Future
+578=Up Previous Future
+579=North Down Previous Future
+580=South Down Previous Future
+581=West Down Previous Future
+582=East Down Previous Future
+583=North West Down Previous Future
+584=North East Down Previous Future
+585=South West Down Previous Future
+586=South East Down Previous Future
+587=North Up Previous Future
+588=South Up Previous Future
+589=West Up Previous Future
+590=East Up Previous Future
+591=North West Up Previous Future
+592=North East Up Previous Future
+593=South West Up Previous Future
+594=South East Up Previous Future
+595=Into Previous Future
+596=Out Previous Future
+597=North Into Previous Future
+598=South Into Previous Future
+599=West Into Previous Future
+600=East Into Previous Future
+601=North West Into Previous Future
+602=North East Into Previous Future
+603=South West Into Previous Future
+604=South East Into Previous Future
+605=Down Into Previous Future
+606=Up Into Previous Future
+607=North Down Into Previous Future
+608=South Down Into Previous Future
+609=West Down Into Previous Future
+610=East Down Into Previous Future
+611=North West Down Into Previous Future
+612=North East Down Into Previous Future
+613=South West Down Into Previous Future
+614=South East Down Into Previous Future
+615=North Up Into Previous Future
+616=South Up Into Previous Future
+617=West Up Into Previous Future
+618=East Up Into Previous Future
+619=North West Up Into Previous Future
+620=North East Up Into Previous Future
+621=South West Up Into Previous Future
+622=South East Up Into Previous Future
+623=North Out Previous Future
+624=South Out Previous Future
+625=West Out Previous Future
+626=East Out Previous Future
+627=North West Out Previous Future
+628=North East Out Previous Future
+629=South West Out Previous Future
+630=South East Out Previous Future
+631=Down Out Previous Future
+632=Up Out Previous Future
+633=North Down Out Previous Future
+634=South Down Out Previous Future
+635=West Down Out Previous Future
+636=East Down Out Previous Future
+637=North West Down Out Previous Future
+638=North East Down Out Previous Future
+639=South West Down Out Previous Future
+640=South East Down Out Previous Future
+641=North Up Out Previous Future
+642=South Up Out Previous Future
+643=West Up Out Previous Future
+644=East Up Out Previous Future
+645=North West Up Out Previous Future
+646=North East Up Out Previous Future
+647=South West Up Out Previous Future
+648=South East Up Out Previous Future
+649=North Next Future
+650=South Next Future
+651=West Next Future
+652=East Next Future
+653=North West Next Future
+654=North East Next Future
+655=South West Next Future
+656=South East Next Future
+657=Down Next Future
+658=Up Next Future
+659=North Down Next Future
+660=South Down Next Future
+661=West Down Next Future
+662=East Down Next Future
+663=North West Down Next Future
+664=North East Down Next Future
+665=South West Down Next Future
+666=South East Down Next Future
+667=North Up Next Future
+668=South Up Next Future
+669=West Up Next Future
+670=East Up Next Future
+671=North West Up Next Future
+672=North East Up Next Future
+673=South West Up Next Future
+674=South East Up Next Future
+675=Into Next Future
+676=Out Next Future
+677=North Into Next Future
+678=South Into Next Future
+679=West Into Next Future
+680=East Into Next Future
+681=North West Into Next Future
+682=North East Into Next Future
+683=South West Into Next Future
+684=South East Into Next Future
+685=Down Into Next Future
+686=Up Into Next Future
+687=North Down Into Next Future
+688=South Down Into Next Future
+689=West Down Into Next Future
+690=East Down Into Next Future
+691=North West Down Into Next Future
+692=North East Down Into Next Future
+693=South West Down Into Next Future
+694=South East Down Into Next Future
+695=North Up Into Next Future
+696=South Up Into Next Future
+697=West Up Into Next Future
+698=East Up Into Next Future
+699=North West Up Into Next Future
+700=North East Up Into Next Future
+701=South West Up Into Next Future
+702=South East Up Into Next Future
+703=North Out Next Future
+704=South Out Next Future
+705=West Out Next Future
+706=East Out Next Future
+707=North West Out Next Future
+708=North East Out Next Future
+709=South West Out Next Future
+710=South East Out Next Future
+711=Down Out Next Future
+712=Up Out Next Future
+713=North Down Out Next Future
+714=South Down Out Next Future
+715=West Down Out Next Future
+716=East Down Out Next Future
+717=North West Down Out Next Future
+718=North East Down Out Next Future
+719=South West Down Out Next Future
+720=South East Down Out Next Future
+721=North Up Out Next Future
+722=South Up Out Next Future
+723=West Up Out Next Future
+724=East Up Out Next Future
+725=North West Up Out Next Future
+726=North East Up Out Next Future
+727=South West Up Out Next Future
+728=South East Up Out Next Future
