--- a/diane-game-engine/src/locale/diane/dirsuffix.properties
+++ b/diane-game-engine/src/locale/diane/dirsuffix.properties
@@ -1,12 +1,729 @@
-0=_northwest
-1=_north
-2=_northeast
-3=_east
-4=_southeast
-5=_south
-6=_southwest
-7=_west
-8=_horizontal
-9=_vertical
-10=
-11=/
+0=
+1=_n
+2=_s
+3=_w
+4=_e
+5=_nw
+6=_ne
+7=_sw
+8=_se
+9=_d
+10=_u
+11=_nd
+12=_sd
+13=_wd
+14=_ed
+15=_nwd
+16=_ned
+17=_swd
+18=_sed
+19=_nu
+20=_su
+21=_wu
+22=_eu
+23=_nwu
+24=_neu
+25=_swu
+26=_seu
+27=_i
+28=_o
+29=_ni
+30=_si
+31=_wi
+32=_ei
+33=_nwi
+34=_nei
+35=_swi
+36=_sei
+37=_di
+38=_ui
+39=_ndi
+40=_sdi
+41=_wdi
+42=_edi
+43=_nwdi
+44=_nedi
+45=_swdi
+46=_sedi
+47=_nui
+48=_sui
+49=_wui
+50=_eui
+51=_nwui
+52=_neui
+53=_swui
+54=_seui
+55=_no
+56=_so
+57=_wo
+58=_eo
+59=_nwo
+60=_neo
+61=_swo
+62=_seo
+63=_do
+64=_uo
+65=_ndo
+66=_sdo
+67=_wdo
+68=_edo
+69=_nwdo
+70=_nedo
+71=_swdo
+72=_sedo
+73=_nuo
+74=_suo
+75=_wuo
+76=_euo
+77=_nwuo
+78=_neuo
+79=_swuo
+80=_seuo
+81=_l
+82=_r
+83=_nl
+84=_sl
+85=_wl
+86=_el
+87=_nwl
+88=_nel
+89=_swl
+90=_sel
+91=_dl
+92=_ul
+93=_ndl
+94=_sdl
+95=_wdl
+96=_edl
+97=_nwdl
+98=_nedl
+99=_swdl
+100=_sedl
+101=_nul
+102=_sul
+103=_wul
+104=_eul
+105=_nwul
+106=_neul
+107=_swul
+108=_seul
+109=_il
+110=_ol
+111=_nil
+112=_sil
+113=_wil
+114=_eil
+115=_nwil
+116=_neil
+117=_swil
+118=_seil
+119=_dil
+120=_uil
+121=_ndil
+122=_sdil
+123=_wdil
+124=_edil
+125=_nwdil
+126=_nedil
+127=_swdil
+128=_sedil
+129=_nuil
+130=_suil
+131=_wuil
+132=_euil
+133=_nwuil
+134=_neuil
+135=_swuil
+136=_seuil
+137=_nol
+138=_sol
+139=_wol
+140=_eol
+141=_nwol
+142=_neol
+143=_swol
+144=_seol
+145=_dol
+146=_uol
+147=_ndol
+148=_sdol
+149=_wdol
+150=_edol
+151=_nwdol
+152=_nedol
+153=_swdol
+154=_sedol
+155=_nuol
+156=_suol
+157=_wuol
+158=_euol
+159=_nwuol
+160=_neuol
+161=_swuol
+162=_seuol
+163=_nr
+164=_sr
+165=_wr
+166=_er
+167=_nwr
+168=_ner
+169=_swr
+170=_ser
+171=_dr
+172=_ur
+173=_ndr
+174=_sdr
+175=_wdr
+176=_edr
+177=_nwdr
+178=_nedr
+179=_swdr
+180=_sedr
+181=_nur
+182=_sur
+183=_wur
+184=_eur
+185=_nwur
+186=_neur
+187=_swur
+188=_seur
+189=_ir
+190=_or
+191=_nir
+192=_sir
+193=_wir
+194=_eir
+195=_nwir
+196=_neir
+197=_swir
+198=_seir
+199=_dir
+200=_uir
+201=_ndir
+202=_sdir
+203=_wdir
+204=_edir
+205=_nwdir
+206=_nedir
+207=_swdir
+208=_sedir
+209=_nuir
+210=_suir
+211=_wuir
+212=_euir
+213=_nwuir
+214=_neuir
+215=_swuir
+216=_seuir
+217=_nor
+218=_sor
+219=_wor
+220=_eor
+221=_nwor
+222=_neor
+223=_swor
+224=_seor
+225=_dor
+226=_uor
+227=_ndor
+228=_sdor
+229=_wdor
+230=_edor
+231=_nwdor
+232=_nedor
+233=_swdor
+234=_sedor
+235=_nuor
+236=_suor
+237=_wuor
+238=_euor
+239=_nwuor
+240=_neuor
+241=_swuor
+242=_seuor
+243=_p
+244=_f
+245=_np
+246=_sp
+247=_wp
+248=_ep
+249=_nwp
+250=_nep
+251=_swp
+252=_sep
+253=_dp
+254=_up
+255=_ndp
+256=_sdp
+257=_wdp
+258=_edp
+259=_nwdp
+260=_nedp
+261=_swdp
+262=_sedp
+263=_nup
+264=_sup
+265=_wup
+266=_eup
+267=_nwup
+268=_neup
+269=_swup
+270=_seup
+271=_ip
+272=_op
+273=_nip
+274=_sip
+275=_wip
+276=_eip
+277=_nwip
+278=_neip
+279=_swip
+280=_seip
+281=_dip
+282=_uip
+283=_ndip
+284=_sdip
+285=_wdip
+286=_edip
+287=_nwdip
+288=_nedip
+289=_swdip
+290=_sedip
+291=_nuip
+292=_suip
+293=_wuip
+294=_euip
+295=_nwuip
+296=_neuip
+297=_swuip
+298=_seuip
+299=_nop
+300=_sop
+301=_wop
+302=_eop
+303=_nwop
+304=_neop
+305=_swop
+306=_seop
+307=_dop
+308=_uop
+309=_ndop
+310=_sdop
+311=_wdop
+312=_edop
+313=_nwdop
+314=_nedop
+315=_swdop
+316=_sedop
+317=_nuop
+318=_suop
+319=_wuop
+320=_euop
+321=_nwuop
+322=_neuop
+323=_swuop
+324=_seuop
+325=_lp
+326=_rp
+327=_nlp
+328=_slp
+329=_wlp
+330=_elp
+331=_nwlp
+332=_nelp
+333=_swlp
+334=_selp
+335=_dlp
+336=_ulp
+337=_ndlp
+338=_sdlp
+339=_wdlp
+340=_edlp
+341=_nwdlp
+342=_nedlp
+343=_swdlp
+344=_sedlp
+345=_nulp
+346=_sulp
+347=_wulp
+348=_eulp
+349=_nwulp
+350=_neulp
+351=_swulp
+352=_seulp
+353=_ilp
+354=_olp
+355=_nilp
+356=_silp
+357=_wilp
+358=_eilp
+359=_nwilp
+360=_neilp
+361=_swilp
+362=_seilp
+363=_dilp
+364=_uilp
+365=_ndilp
+366=_sdilp
+367=_wdilp
+368=_edilp
+369=_nwdilp
+370=_nedilp
+371=_swdilp
+372=_sedilp
+373=_nuilp
+374=_suilp
+375=_wuilp
+376=_euilp
+377=_nwuilp
+378=_neuilp
+379=_swuilp
+380=_seuilp
+381=_nolp
+382=_solp
+383=_wolp
+384=_eolp
+385=_nwolp
+386=_neolp
+387=_swolp
+388=_seolp
+389=_dolp
+390=_uolp
+391=_ndolp
+392=_sdolp
+393=_wdolp
+394=_edolp
+395=_nwdolp
+396=_nedolp
+397=_swdolp
+398=_sedolp
+399=_nuolp
+400=_suolp
+401=_wuolp
+402=_euolp
+403=_nwuolp
+404=_neuolp
+405=_swuolp
+406=_seuolp
+407=_nrp
+408=_srp
+409=_wrp
+410=_erp
+411=_nwrp
+412=_nerp
+413=_swrp
+414=_serp
+415=_drp
+416=_urp
+417=_ndrp
+418=_sdrp
+419=_wdrp
+420=_edrp
+421=_nwdrp
+422=_nedrp
+423=_swdrp
+424=_sedrp
+425=_nurp
+426=_surp
+427=_wurp
+428=_eurp
+429=_nwurp
+430=_neurp
+431=_swurp
+432=_seurp
+433=_irp
+434=_orp
+435=_nirp
+436=_sirp
+437=_wirp
+438=_eirp
+439=_nwirp
+440=_neirp
+441=_swirp
+442=_seirp
+443=_dirp
+444=_uirp
+445=_ndirp
+446=_sdirp
+447=_wdirp
+448=_edirp
+449=_nwdirp
+450=_nedirp
+451=_swdirp
+452=_sedirp
+453=_nuirp
+454=_suirp
+455=_wuirp
+456=_euirp
+457=_nwuirp
+458=_neuirp
+459=_swuirp
+460=_seuirp
+461=_norp
+462=_sorp
+463=_worp
+464=_eorp
+465=_nworp
+466=_neorp
+467=_sworp
+468=_seorp
+469=_dorp
+470=_uorp
+471=_ndorp
+472=_sdorp
+473=_wdorp
+474=_edorp
+475=_nwdorp
+476=_nedorp
+477=_swdorp
+478=_sedorp
+479=_nuorp
+480=_suorp
+481=_wuorp
+482=_euorp
+483=_nwuorp
+484=_neuorp
+485=_swuorp
+486=_seuorp
+487=_nf
+488=_sf
+489=_wf
+490=_ef
+491=_nwf
+492=_nef
+493=_swf
+494=_sef
+495=_df
+496=_uf
+497=_ndf
+498=_sdf
+499=_wdf
+500=_edf
+501=_nwdf
+502=_nedf
+503=_swdf
+504=_sedf
+505=_nuf
+506=_suf
+507=_wuf
+508=_euf
+509=_nwuf
+510=_neuf
+511=_swuf
+512=_seuf
+513=_if
+514=_of
+515=_nif
+516=_sif
+517=_wif
+518=_eif
+519=_nwif
+520=_neif
+521=_swif
+522=_seif
+523=_dif
+524=_uif
+525=_ndif
+526=_sdif
+527=_wdif
+528=_edif
+529=_nwdif
+530=_nedif
+531=_swdif
+532=_sedif
+533=_nuif
+534=_suif
+535=_wuif
+536=_euif
+537=_nwuif
+538=_neuif
+539=_swuif
+540=_seuif
+541=_nof
+542=_sof
+543=_wof
+544=_eof
+545=_nwof
+546=_neof
+547=_swof
+548=_seof
+549=_dof
+550=_uof
+551=_ndof
+552=_sdof
+553=_wdof
+554=_edof
+555=_nwdof
+556=_nedof
+557=_swdof
+558=_sedof
+559=_nuof
+560=_suof
+561=_wuof
+562=_euof
+563=_nwuof
+564=_neuof
+565=_swuof
+566=_seuof
+567=_lf
+568=_rf
+569=_nlf
+570=_slf
+571=_wlf
+572=_elf
+573=_nwlf
+574=_nelf
+575=_swlf
+576=_self
+577=_dlf
+578=_ulf
+579=_ndlf
+580=_sdlf
+581=_wdlf
+582=_edlf
+583=_nwdlf
+584=_nedlf
+585=_swdlf
+586=_sedlf
+587=_nulf
+588=_sulf
+589=_wulf
+590=_eulf
+591=_nwulf
+592=_neulf
+593=_swulf
+594=_seulf
+595=_ilf
+596=_olf
+597=_nilf
+598=_silf
+599=_wilf
+600=_eilf
+601=_nwilf
+602=_neilf
+603=_swilf
+604=_seilf
+605=_dilf
+606=_uilf
+607=_ndilf
+608=_sdilf
+609=_wdilf
+610=_edilf
+611=_nwdilf
+612=_nedilf
+613=_swdilf
+614=_sedilf
+615=_nuilf
+616=_suilf
+617=_wuilf
+618=_euilf
+619=_nwuilf
+620=_neuilf
+621=_swuilf
+622=_seuilf
+623=_nolf
+624=_solf
+625=_wolf
+626=_eolf
+627=_nwolf
+628=_neolf
+629=_swolf
+630=_seolf
+631=_dolf
+632=_uolf
+633=_ndolf
+634=_sdolf
+635=_wdolf
+636=_edolf
+637=_nwdolf
+638=_nedolf
+639=_swdolf
+640=_sedolf
+641=_nuolf
+642=_suolf
+643=_wuolf
+644=_euolf
+645=_nwuolf
+646=_neuolf
+647=_swuolf
+648=_seuolf
+649=_nrf
+650=_srf
+651=_wrf
+652=_erf
+653=_nwrf
+654=_nerf
+655=_swrf
+656=_serf
+657=_drf
+658=_urf
+659=_ndrf
+660=_sdrf
+661=_wdrf
+662=_edrf
+663=_nwdrf
+664=_nedrf
+665=_swdrf
+666=_sedrf
+667=_nurf
+668=_surf
+669=_wurf
+670=_eurf
+671=_nwurf
+672=_neurf
+673=_swurf
+674=_seurf
+675=_irf
+676=_orf
+677=_nirf
+678=_sirf
+679=_wirf
+680=_eirf
+681=_nwirf
+682=_neirf
+683=_swirf
+684=_seirf
+685=_dirf
+686=_uirf
+687=_ndirf
+688=_sdirf
+689=_wdirf
+690=_edirf
+691=_nwdirf
+692=_nedirf
+693=_swdirf
+694=_sedirf
+695=_nuirf
+696=_suirf
+697=_wuirf
+698=_euirf
+699=_nwuirf
+700=_neuirf
+701=_swuirf
+702=_seuirf
+703=_norf
+704=_sorf
+705=_worf
+706=_eorf
+707=_nworf
+708=_neorf
+709=_sworf
+710=_seorf
+711=_dorf
+712=_uorf
+713=_ndorf
+714=_sdorf
+715=_wdorf
+716=_edorf
+717=_nwdorf
+718=_nedorf
+719=_swdorf
+720=_sedorf
+721=_nuorf
+722=_suorf
+723=_wuorf
+724=_euorf
+725=_nwuorf
+726=_neuorf
+727=_swuorf
+728=_seuorf
